--- a/app/src/main/res/drawable/ic_favorite_state.xml
+++ b/app/src/main/res/drawable/ic_favorite_state.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_favorite_filled" android:state_pressed="true" />
-    <item android:drawable="@drawable/ic_favorite_border" android:state_pressed="false" />
+    <item android:drawable="@drawable/ic_favorite_filled" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_favorite_border" android:state_checked="false" />
 
 </selector>
