--- a/app/src/main/res/drawable/ic_seen_icon.xml
+++ b/app/src/main/res/drawable/ic_seen_icon.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/ic_eye_closed" android:state_pressed="true" />
-    <item android:drawable="@drawable/ic_eye_open" android:state_pressed="false" />
+    <item android:drawable="@drawable/ic_eye_closed" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_eye_open" android:state_checked="false" />
 </selector>
