--- a/app/src/main/res/layout/list_item_section.xml
+++ b/app/src/main/res/layout/list_item_section.xml
@@ -29,7 +29,6 @@
                 android:id="@+id/textSectionTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:autoSizeMaxTextSize="24sp"
                 android:autoSizeMinTextSize="12sp"
                 android:autoSizeStepGranularity="2sp"
@@ -38,7 +37,9 @@
                 android:textColor="@color/alabaster"
                 android:textSize="24sp"
                 app:asHtml="@{section}"
-                tools:text="@tools:sample/first_names" />
+                tools:text="@tools:sample/first_names"
+                app:drawableEndCompat="@drawable/ic_outline_arrow_forward_24"
+                app:drawableTint="@color/alabaster" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
