Created a new visual component to show a Horizontal chip group
+ The component allows users to pass a list of any objects and specify which member to insert as text into the chip

+Users can also provide an action bound to the click of each chip

+The code makes use of view binding to avoid cast errors

+This component can be used in different parts of the application to show a group of selectable items in a horizontal layout

--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -57,7 +57,7 @@
                 android:textColor="@color/geyser"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-
+<!--
             <HorizontalScrollView
                 android:id="@+id/chip_group"
                 android:layout_width="match_parent"
@@ -72,13 +72,19 @@
                     app:genres="@{movie.genres}"
                     app:singleLine="true"
                     app:singleSelection="true" />
-            </HorizontalScrollView>
+            </HorizontalScrollView>-->
+            <com.example.cinemates.model.HorizontalChipView
+                android:id="@+id/chiGroupGenres"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textTitleGenres"
+                android:padding="10dp"/>
 
             <TextView
                 android:id="@+id/textTitleInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/chip_group"
+                android:layout_below="@id/chiGroupGenres"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Movie Info"
