--- a/app/src/main/res/layout/layout_tv_info.xml
+++ b/app/src/main/res/layout/layout_tv_info.xml
@@ -17,16 +17,16 @@
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/originalTitle"
             android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             app:title="Original title"
-            app:value="@{tv.name}" />
+            app:value="@{tv.original_name}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/status"
             android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             app:title="Status"
             app:value="@{tv.status}" />
 
@@ -34,10 +34,18 @@
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/originalLanguage"
             android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             app:title="Original language"
             app:value="@{tv.original_language}" />
+
+        <com.indisparte.linearlayoutinfo.LinearInfoView
+            android:id="@+id/firstAirDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            app:title="First air date"
+            app:value="@{tv.first_air_date}" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
