--- a/app/src/main/res/layout/fragment_tv_details.xml
+++ b/app/src/main/res/layout/fragment_tv_details.xml
@@ -40,7 +40,7 @@
                     android:layout_height="match_parent">
 
                     <include
-                        android:id="@+id/movie_poster"
+                        android:id="@+id/tv_poster"
                         layout="@layout/list_item_poster"
                         android:layout_width="100dp"
                         android:layout_height="150dp"
@@ -53,7 +53,7 @@
 
 
                     <ImageView
-                        android:id="@+id/movie_backdrop"
+                        android:id="@+id/tv_backdrop"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:scaleType="centerCrop"
@@ -65,7 +65,7 @@
 
 
                     <TextView
-                        android:id="@+id/movie_title"
+                        android:id="@+id/tv_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -77,22 +77,22 @@
                         android:textSize="24sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/movie_poster"
-                        app:layout_constraintTop_toBottomOf="@id/movie_backdrop"
+                        app:layout_constraintStart_toEndOf="@id/tv_poster"
+                        app:layout_constraintTop_toBottomOf="@id/tv_backdrop"
                         tools:text="Tv Show name" />
 
-                   <!-- <TextView
-                        android:id="@+id/movie_release_date"
+                    <TextView
+                        android:id="@+id/tv_season_counter"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
-                        android:text='@{tv.formattedReleaseDate+" - "+tv.formattedRuntime}'
+                        android:text='@{"Seasons "+tv.number_of_seasons+" -Episodes"+tv.number_of_episodes}'
                         android:textColor="@color/geyser"
                         android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/movie_poster"
-                        app:layout_constraintTop_toBottomOf="@id/movie_title"
-                        tools:text="@tools:sample/date/mmddyy" />-->
+                        app:layout_constraintStart_toEndOf="@id/tv_poster"
+                        app:layout_constraintTop_toBottomOf="@id/tv_title"
+                        tools:text="Seasons 1 - Episodes 34" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/watch_providers"
