--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -57,34 +57,34 @@
                 android:textColor="@color/geyser"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-<!--
-            <HorizontalScrollView
-                android:id="@+id/chip_group"
+            <!--
+                        <HorizontalScrollView
+                            android:id="@+id/chip_group"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/textTitleGenres"
+                            android:padding="10dp">
+
+                            <com.google.android.material.chip.ChipGroup
+                                android:id="@+id/chipGroupGenres"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:genres="@{tv.genres}"
+                                app:singleLine="true"
+                                app:singleSelection="true" />
+                        </HorizontalScrollView>-->
+            <com.example.cinemates.model.HorizontalChipView
+                android:id="@+id/chipGroupGenres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textTitleGenres"
-                android:padding="10dp">
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/chipGroupGenres"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:genres="@{tv.genres}"
-                    app:singleLine="true"
-                    app:singleSelection="true" />
-            </HorizontalScrollView>-->
-            <com.example.cinemates.model.HorizontalChipView
-                android:id="@+id/chips_horizontal_view"
-                android:layout_width="match_parent"
-                android:layout_below="@id/textTitleGenres"
-                android:padding="10dp"
-                android:layout_height="wrap_content"/>
+                android:padding="10dp" />
 
             <TextView
                 android:id="@+id/textTitleInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/chips_horizontal_view"
+                android:layout_below="@id/chipGroupGenres"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="TvShow Info"
