--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -57,22 +57,7 @@
                 android:textColor="@color/geyser"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-            <!--
-                        <HorizontalScrollView
-                            android:id="@+id/chip_group"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/textTitleGenres"
-                            android:padding="10dp">
 
-                            <com.google.android.material.chip.ChipGroup
-                                android:id="@+id/chipGroupGenres"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:genres="@{tv.genres}"
-                                app:singleLine="true"
-                                app:singleSelection="true" />
-                        </HorizontalScrollView>-->
             <com.example.cinemates.model.HorizontalChipView
                 android:id="@+id/chipGroupGenres"
                 android:layout_width="match_parent"
@@ -87,7 +72,7 @@
                 android:layout_below="@id/chipGroupGenres"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:text="TvShow Info"
+                android:text="Info"
                 android:textColor="@color/alabaster"
                 android:textSize="18sp"
                 android:textStyle="bold" />
