--- a/app/src/main/res/layout/list_item_movie_long.xml
+++ b/app/src/main/res/layout/list_item_movie_long.xml
@@ -12,7 +12,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="182dp"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@android:color/transparent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,12 +24,12 @@
                 layout="@layout/layout_movie_poster"
                 android:layout_width="100dp"
                 android:layout_height="150dp"
-                app:path="@{movie.poster_path}"
-                app:vote="@{movie.vote_average}"
                 android:layout_margin="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:path="@{movie.poster_path}"
+                app:vote="@{movie.vote_average}" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="0dp"
@@ -48,9 +48,9 @@
                     android:id="@+id/textHeader"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{movie.release_date}"
                     android:textColor="@color/geyser"
                     android:textSize="14sp"
-                    android:text="@{movie.release_date}"
                     android:textStyle="bold"
                     tools:text="2010" />
 
@@ -59,9 +59,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:autoSizeTextType="uniform"
-                    android:textColor="@color/alabaster"
-                    android:textSize="24sp"
                     android:text="@{movie.title}"
+                    android:textColor="@color/alabaster"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     tools:text="Movie Title" />
 
@@ -69,21 +69,12 @@
                     android:id="@+id/textSubtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{movie.formattedGenres}"
                     android:textColor="@color/geyser"
                     android:textSize="14sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     tools:text="Genre1, Genre2, Genre3" />
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <ImageView
-                android:id="@+id/iconMore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="12dp"
-                android:src="@drawable/ic_baseline_more_vert_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/alabaster" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
