--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/lynch_100"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/menu_home">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/imageProfile"
@@ -35,8 +34,8 @@
         android:id="@+id/sectionRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
         android:clipToPadding="false"
+        android:layout_below="@id/toolbar"
         android:orientation="vertical"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
