--- a/app/src/main/res/layout/fragment_actor_about.xml
+++ b/app/src/main/res/layout/fragment_actor_about.xml
@@ -18,8 +18,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
+            android:layout_margin="10dp"
+            android:layout_height="match_parent">
 
 
             <com.indisparte.linearlayoutinfo.LinearInfoView
@@ -87,6 +87,7 @@
                 android:id="@+id/chipGroupKnownAs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipToPadding="false"
                 android:layout_below="@id/knownAsTitle"
                 android:padding="10dp" />
 
