--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -29,9 +29,9 @@
                 app:collapsedTitleTextColor="@color/geyser"
                 app:contentScrim="@color/lynch_100"
                 app:expandedTitleMarginStart="10dp"
-                app:titleCollapseMode="fade"
                 app:expandedTitleTextColor="@android:color/transparent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                app:titleCollapseMode="fade">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -79,6 +79,19 @@
                         app:layout_constraintTop_toBottomOf="@id/movie_backdrop"
                         tools:text="Movie title" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text='@{movie.formattedRuntime}'
+                        android:textColor="@color/alabaster"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@id/movie_poster"
+                        android:layout_marginStart="20dp"
+                        app:layout_constraintTop_toBottomOf="@id/movie_title"
+                        tools:text="2h 34 min" />
+
+
                     <com.google.android.material.chip.Chip
                         android:id="@+id/watch_providers"
                         android:layout_width="wrap_content"
@@ -103,8 +116,8 @@
                     android:layout_height="?attr/actionBarSize"
                     android:layout_marginBottom="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:title="@{movie.title}"
-                    app:navigationIcon="@drawable/ic_round_arrow_back_24" />
+                    app:navigationIcon="@drawable/ic_round_arrow_back_24"
+                    app:title="@{movie.title}" />
 
 
                 <com.google.android.material.tabs.TabLayout
