--- a/app/src/main/res/layout/layout_tv_info.xml
+++ b/app/src/main/res/layout/layout_tv_info.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:title="Original title"
-            app:value="@{tv.original_name}" />
+            app:value="@{tv.originalName}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/status"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:title="Original language"
-            app:value="@{tv.original_language}" />
+            app:value="@{tv.originalLanguage}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/firstAirDate"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:title="First air date"
-            app:value="@{tv.first_air_date}" />
+            app:value="@{tv.firstAirDate}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/numberOfEpisodes"
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:title="Episodes"
-            app:value="@{String.valueOf(tv.number_of_episodes)}" />
+            app:value="@{String.valueOf(tv.numberOfEpisodes)}" />
 
         <com.indisparte.linearlayoutinfo.LinearInfoView
             android:id="@+id/numberOfSeasons"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:title="Seasons"
-            app:value="@{String.valueOf(tv.number_of_seasons)}" />
+            app:value="@{String.valueOf(tv.numberOfSeasons)}" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
