Naming convention in Kotlin

--- a/app/src/main/res/layout/fragment_tv_details.xml
+++ b/app/src/main/res/layout/fragment_tv_details.xml
@@ -50,7 +50,7 @@
                         android:elevation="4dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:path="@{tv.poster_path}" />
+                        app:path="@{tv.posterPath}" />
 
 
                     <ImageView
@@ -58,7 +58,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:scaleType="centerCrop"
-                        app:imageUrlLong="@{tv.backdrop_path}"
+                        app:imageUrlLong="@{tv.backdropPath}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
