--- a/app/src/main/res/layout/fragment_actor_about.xml
+++ b/app/src/main/res/layout/fragment_actor_about.xml
@@ -58,7 +58,7 @@
                 android:layout_marginBottom="10dp"
                 app:hideIfValueEmpty="true"
                 app:title="From"
-                app:value="@{person.place_of_birth}" />
+                app:value="@{person.placeOfBirth}" />
 
             <com.indisparte.linearlayoutinfo.LinearInfoView
                 android:id="@+id/biography"
@@ -81,7 +81,7 @@
                 android:textColor="@color/geyser"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:visibility="@{person.also_known_as.empty? View.GONE:View.VISIBLE}" />
+                android:visibility="@{person.alsoKnownAs.empty? View.GONE:View.VISIBLE}" />
 
             <com.indisparte.horizontalchipview.HorizontalChipView
                 android:id="@+id/chipGroupKnownAs"
