--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -47,7 +47,7 @@
                         android:elevation="4dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:path="@{movie.poster_path}" />
+                        app:path="@{movie.posterPath}" />
 
 
                     <ImageView
@@ -55,7 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:scaleType="centerCrop"
-                        app:imageUrlLong="@{movie.backdrop_path}"
+                        app:imageUrlLong="@{movie.backdropPath}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
