--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -132,13 +132,13 @@
                     android:id="@+id/posters_shower"
                     layout="@layout/list_item_poster"
                     app:counter="@{poster_counter}"
-                    app:path="@{tv.poster_path}" />
+                    app:path="@{tv.posterPath}" />
 
                 <include
                     android:id="@+id/backdrops_shower"
                     layout="@layout/list_item_backdrop"
                     app:counter="@{backdrop_counter}"
-                    app:path="@{tv.backdrop_path}" />
+                    app:path="@{tv.backdropPath}" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
