--- a/app/src/main/res/layout/layout_collection_cover.xml
+++ b/app/src/main/res/layout/layout_collection_cover.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                app:imageUrlLong="@{collection.backdrop_path}"
+                app:imageUrlLong="@{collection.backdropPath}"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
             <TextView
