--- a/app/src/main/res/layout/list_item_crew_long.xml
+++ b/app/src/main/res/layout/list_item_crew_long.xml
@@ -19,7 +19,7 @@
 
         <include
             layout="@layout/layout_person_avatar"
-            app:path="@{crew.profile_path}" />
+            app:path="@{crew.profilePath}" />
 
         <TextView
             android:id="@+id/tvTitle"
