--- a/app/src/main/res/layout/list_item_crew_small.xml
+++ b/app/src/main/res/layout/list_item_crew_small.xml
@@ -23,7 +23,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
-            app:path="@{crew.profile_path}" />
+            app:path="@{crew.profilePath}" />
 
         <TextView
             android:id="@+id/tvTitle"
