Display Created By as a tab

--- a/app/src/main/res/layout/fragment_tv_details.xml
+++ b/app/src/main/res/layout/fragment_tv_details.xml
@@ -20,6 +20,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout2"
+            android:background="@color/mirage_100"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
