--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -87,12 +87,33 @@
                 android:layout_marginTop="10dp"
                 app:tv="@{tv}" />
 
+            <TextView
+                android:id="@+id/episode_group_section"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_info"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text="Episode groups"
+                android:textColor="@color/alabaster"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <com.example.cinemates.util.RecyclerViewEmptySupport
+                android:id="@+id/episode_groups"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/episode_group_section"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/list_item_episode_group" />
 
             <TextView
                 android:id="@+id/trailer_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_info"
+                android:layout_below="@id/episode_groups"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:text="Trailers"
