--- a/app/src/main/res/layout/fragment_tv_details.xml
+++ b/app/src/main/res/layout/fragment_tv_details.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout2"
+            android:id="@+id/appBarLayout"
             android:background="@color/mirage_100"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
