--- a/app/src/main/res/layout/fragment_tv_details.xml
+++ b/app/src/main/res/layout/fragment_tv_details.xml
@@ -87,8 +87,7 @@
                         android:id="@+id/watch_providers"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="?attr/actionBarSize"
-                        android:layout_marginEnd="20dp"
+                        android:layout_margin="20dp"
                         android:backgroundTint="@color/lynch_90"
                         android:clickable="true"
                         android:padding="10dp"
@@ -96,8 +95,8 @@
                         android:textColor="@color/alabaster"
                         android:textSize="12sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintBottom_toTopOf="@+id/tv_title"
+                        app:layout_constraintEnd_toEndOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
