--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -18,6 +18,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
+            android:background="@color/mirage_100"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -79,25 +80,11 @@
                         app:layout_constraintTop_toBottomOf="@id/movie_backdrop"
                         tools:text="Movie title" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text='@{movie.formattedRuntime}'
-                        android:textColor="@color/alabaster"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toEndOf="@id/movie_poster"
-                        android:layout_marginStart="20dp"
-                        app:layout_constraintTop_toBottomOf="@id/movie_title"
-                        tools:text="2h 34 min" />
-
-
                     <com.google.android.material.chip.Chip
                         android:id="@+id/watch_providers"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="?attr/actionBarSize"
-                        android:layout_marginEnd="20dp"
+                        android:layout_margin="10dp"
                         android:backgroundTint="@color/lynch_90"
                         android:clickable="true"
                         android:padding="10dp"
@@ -105,8 +92,8 @@
                         android:textColor="@color/alabaster"
                         android:textSize="12sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintBottom_toTopOf="@+id/movie_title"
+                        app:layout_constraintEnd_toEndOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
